--- a/sidebar.css
+++ b/sidebar.css
@@ -1,5 +1,5 @@
 ._3x1HklzyDs4TEjACrRO2tB {
-    background: var(--minimal_dark_blacker_alt);
+    /* background: var(--minimal_dark_blacker_alt); JunkyModifications.css*/
     height: 100%;
     flex: 1;
     display: flex;
