--- a/libraryroot.custom.css
+++ b/libraryroot.custom.css
@@ -12,6 +12,7 @@
 @import url('profile.css');
 @import url('notifications.css');
 @import url('miniprofile.css');
+@import url('JunkyModifications.css');
 
 * {
 	cursor: default !important;
